--- a/python/model-router/Dockerfile
+++ b/python/model-router/Dockerfile
@@ -1,20 +1,18 @@
-# Use an official Python runtime as a parent image
-FROM python
+FROM python:3.11-slim
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . .
+COPY . /app
 
-# Install any needed packages specified in requirements.txt
+# Install Kubernetes Client
+RUN pip install kubernetes
+
+# Install other requirements
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port 8000 available to the world outside this container
+# Do not copy kube-config inside the cluster
+# It's assumed the cluster will provide this automatically
+
 EXPOSE 8000
 
-# Define environment variable
-# ENV NAME World
-
-# Run FastAPI application when the container launches
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
